Mise en jour de la table Etudiant et css sur la Transaction

--- a/Compta/templates/dashboard/listeTransaction.html
+++ b/Compta/templates/dashboard/listeTransaction.html
@@ -67,7 +67,7 @@
                 <td>{{transaction.montant}}</td>
                 <td>{{transaction.date_creation}}</td>
                 <td><a href="{% url 'modifTransaction' transaction.id %}" class="btn btn-success">Modifier</a></td>
-                <td><a href="" class="btn btn-danger">Suppprimer</a></td>
+                <td><a href="{% url 'suppTransaction' transaction.id %}" class="btn btn-danger">Suppprimer</a></td>
               </tr>
               {% empty %}
               <tr>
