--- a/Compta/templates/accueil/index.html
+++ b/Compta/templates/accueil/index.html
@@ -17,11 +17,12 @@
         flex-direction: column;
        
     }
-    .content .alert{
+    .content .error{
         margin-top: 30px;
     }
     .content .contenu{
         width: 350px;
+        height: 300px;
         background-color: white;
         margin-top: 25px;
         margin-bottom: 25px;
@@ -33,7 +34,15 @@
     }
     .content .contenu form{
         width: 90%;
+        height: 80%;
         margin: 3%;
+    }
+    .content .contenu .titre{
+        margin-top: 20px;
+        color: teal;
+    }
+    .content .contenu form .nom{
+        margin-bottom: 15px;
     }
     .content .contenu form button{
      margin-top: 10px;
@@ -48,16 +57,25 @@
 
 <div class="content">
     {% for message in messages %}
-      <div class="alert alert-danger">
+      <div class="alert alert-danger error">
         <p style="color: maroon;">{{message}}</p>
       </div>
     {% endfor %}
     <div class="contenu">
+        <div class="titre">
+            <h3>Bienvenue</h3>
+        </div>
         <form action="" method="post" novalidate>
             {% csrf_token %}
-            {{form}}
+            <div class="nom">
+                {{form.nom}}
+            </div>
+            <div class="password">
+                {{form.password}}
+            </div>
             <button type="submit" class="btn btn-danger btn-block">Se connecter</button>
-            <a href="">Mot de passe oublié ?</a>
+            <br>
+            <p>Pas de compte ? <a href="">S'inscrire</a></p>
         </form>
     </div>
 </div>
