--- a/Compta/templates/dashboard/listeEtudiant.html
+++ b/Compta/templates/dashboard/listeEtudiant.html
@@ -49,6 +49,7 @@
                 <th>Nom</th>
                 <th>PostNom</th>
                 <th>Prénom</th>
+                <th>Date Creation</th>
                 <th>Modifier</th>
                 <th>Supprimer</th>
             </tr>
@@ -60,6 +61,7 @@
                 <td>{{etudiants.nom}}</td>
                 <td>{{etudiants.postnom}}</td>
                 <td>{{etudiants.prenom}}</td>
+                <td>{{etudiants.date_creation}}</td>
                 <td><a href="{% url 'modifierEtudiant' etudiants.id %}" class="btn btn-success">Modifier</a></td>
                 <td><a href="{% url 'supprimerEtudiant'  etudiants.id %}" class="btn btn-danger">Supprimer</a></td>
               </tr>
