--- a/Compta/templates/dashboard/listeFrais.html
+++ b/Compta/templates/dashboard/listeFrais.html
@@ -11,31 +11,37 @@
         flex-direction: column;
         margin-top: 90px;
     }
+    .content .contenu tr th{
+        background-color: rgb(23, 64, 142);
+        color: white;
+    }
 </style>
 
 <div class="content">
     <div class="titre">
         <p>Liste des Frais</p>
-        <a href="" class="btn btn-info">Ajouter les Frais</a>
+        <a href="{% url 'FixerFrais' %}" class="btn btn-info">Ajouter les Frais</a>
     </div>
     <div class="contenu">
         <table class="table table-responsive table-bordered">
             <tr>
                 <th>N°</th>
-                <th>Afficher</th>
                 <th>Designation</th>
+                <th>Année</th>
                 <th>Montant</th>
+                <th>Date_Creation</th>
                 <th>Modifier</th>
                 <th>Supprimer</th>
             </tr>
             {% for liste_frais in liste_frais %}
               <tr>
                 <td>{{forloop.counter}}</td>
-                <td><a href="" class="btn btn-dark">Afficher</a></td>
                 <td>{{liste_frais.designation}}</td>
+                <td>{{liste_frais.annee}}</td>
                 <td>{{liste_frais.montant}}</td>
-                <td><a href="" class="btn btn-danger">Modifier</a></td>
-                <td><a href="" class="btn btn-success">Supprimer</a></td>
+                <td>{{liste_frais.date_creation}}</td>
+                <td><a href="{% url 'ChangeFrais' liste_frais.id  %}" class="btn btn-success">Modifier</a></td>
+                <td><a href="{% url 'suppFrais' liste_frais.id %}" class="btn  btn-danger ">Supprimer</a></td>
               </tr>
             {% endfor %}
         </table>
