--- a/Compta/templates/dashboard/listeFrais.html
+++ b/Compta/templates/dashboard/listeFrais.html
@@ -19,7 +19,7 @@
 
 <div class="content">
     <div class="titre">
-        <p>Liste des Frais</p>
+        <p>Liste des Frais fixés pour {{get_id.designation}}</p>
         <a href="{% url 'FixerFrais' %}" class="btn btn-info">Ajouter les Frais</a>
     </div>
     <div class="contenu">
